--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -9,6 +9,10 @@ html {
   padding: 0 40px;
 }
 
+.header {
+  background-color: #ffffff;
+}
+
 .header-container {
   display: flex;
   /* background-image: url("../../assets/images/gradient-bg.jpg"); */
@@ -79,6 +83,10 @@ html {
   border-bottom: 3px solid transparent;
 }
 
+.header-link:hover {
+  color: #292929;
+}
+
 .bottom {
   border-bottom: 3px solid #f1cdb3;
   padding-bottom: 4px;
@@ -93,6 +101,10 @@ html {
 } */
 
 /* ----------------------------OUR FRIENDS---------------------------- */
+.our-friends {
+  background: #f6f6f6;
+}
+
 .our-friends-container {
   height: 1342px;
   /* max-width: 1200px; */
@@ -393,6 +405,12 @@ li {
 }
 
 /* ----------------------------FOOTER---------------------------- */
+.footer {
+  background-image: url("../../assets/images/gradient-bg-1280.jpg");
+  /* background: url(noise_lines_transparent@2X.png),
+    radial-gradient(110.67% 538.64% at 5.73% 50%, #513d2f 0%, #1a1a1c 100%),
+    #211f20; */
+}
 
 .footer-container {
   height: 350px;
