--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -140,7 +140,10 @@ html {
   padding: 0;
   margin: 0;
   /* padding-top: 55px; */
-  padding-bottom: 31px;
+  padding-bottom: 0;
+  /* 
+  padding-top: 57px;
+  margin-bottom: 30px; */
 }
 
 .card-box {
@@ -177,18 +180,32 @@ html {
   line-height: 23px;
   letter-spacing: 0.06em;
   color: #545454;
-  padding-top: 33px;
+  /* padding-top: 33px; */
   /* display: flex;
     align-items: center;
     text-align: center; */
+  padding-top: 27px;
+  padding-bottom: 2px;
+  text-align: center;
 }
 
 .card-button {
-  padding: 14px 44px;
+  padding: 14px 45px;
   border: 2px solid #f1cdb3;
   border-radius: 100px;
   background: #fafafa;
-  margin: 27px 0px;
+  margin-top: 27px;
+  margin-left: 39px;
+  margin-bottom: 30px;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  /* margin: 27px 0px; */
+  /* margin-left: 44px; */
+  /* margin-bottom: 3px; */
 }
 
 .card:hover .card-button {
@@ -417,7 +434,7 @@ html {
 
 .footer-container {
   height: 350px;
-  /* background-image: url("../../assets/images/gradient-bg-1280.jpg"); */
+  background-image: url("../../assets/images/gradient-bg-1280.jpg");
 }
 
 .footer-block {
