fix: change size

--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -51,7 +51,9 @@
     padding: 13px 44px;
   }
   .slider-block {
-    padding-top: 10px;
+    padding-top: 0;
+    margin-bottom: 60px;
+    margin-top: 0;
   }
 
   /* ------modal------- */
