--- a/shelter/pages/pets/style-adaptive2.css
+++ b/shelter/pages/pets/style-adaptive2.css
@@ -51,9 +51,7 @@
     padding: 13px 44px;
   }
   .slider-block {
-    padding-top: 0;
-    margin-bottom: 60px;
-    margin-top: 0;
+    padding-top: 10px;
   }
 
   /* ------modal------- */
