--- a/shelter/pages/pets/style2.css
+++ b/shelter/pages/pets/style2.css
@@ -141,9 +141,9 @@ html {
   margin: 0;
   /* padding-top: 55px; */
   padding-bottom: 0;
-
-  /* padding-top: 57px; */
-  margin-bottom: 26px;
+  /* 
+  padding-top: 57px;
+  margin-bottom: 30px; */
 }
 
 .card-box {
@@ -252,7 +252,6 @@ html {
   transform: translate(0px, 0px);
   opacity: 1;
 }
-
 .modal-content {
   position: relative;
   max-width: 900px;
@@ -281,8 +280,8 @@ html {
   background: rgba(41, 41, 41, 0.6);
   line-height: 25px;
   position: absolute;
-  right: -43px;
-  top: -50px;
+  right: -50px;
+  top: -45px;
   width: 52px;
   height: 52px;
   padding: 10px 15px;
@@ -329,9 +328,8 @@ html {
 }
 
 .modal-title {
-  padding-top: 50px;
+  padding-top: 20px;
   padding-bottom: 10px;
-  padding-left: 10px;
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
@@ -342,7 +340,6 @@ html {
 }
 
 .modal-subtitle {
-  padding-left: 10px;
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
@@ -354,10 +351,8 @@ html {
 
 .modal-text {
   padding-top: 40px;
-  padding-bottom: 20px;
-  padding-left: 10px;
-  /* width: 350px; */
-  width: 360px;
+  padding-bottom: 40px;
+  width: 350px;
   font-family: "Georgia", serif;
   font-style: normal;
   font-weight: 400;
@@ -367,14 +362,13 @@ html {
   color: #000000;
 }
 
-.modal-ul {
-  padding: 20px;
-}
-
 .modal-li {
-  padding-bottom: 10px;
+  /* text-align: left; */
+  /* left: 0; */
+  padding-bottom: 11px;
   color: #f1cdb3;
 }
+
 .modal-span1 {
   font-family: "Georgia", serif;
   font-style: normal;
@@ -383,7 +377,6 @@ html {
   line-height: 110%;
   letter-spacing: 0.06em;
   color: #000000;
-  padding-left: 5px;
 }
 
 .modal-span2 {
